test/corpus/names.c
================================================================================
G_bName
================================================================================
G_bName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
E_bName
================================================================================
E_bName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
M_bName
================================================================================
M_bName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
m_bName
================================================================================
m_bName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
g_bName
================================================================================
g_bName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
i1Name
================================================================================
i1Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
i2Name
================================================================================
i2Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
i4Name
================================================================================
i4Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
i8Name
================================================================================
i8Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
u1Name
================================================================================
u1Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
u2Name
================================================================================
u2Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
u4Name
================================================================================
u4Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
u8Name
================================================================================
u8Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
f4Name
================================================================================
f4Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
f8Name
================================================================================
f8Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
chName
================================================================================
chName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
bName
================================================================================
bName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
vName
================================================================================
vName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
clName
================================================================================
clName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
sName
================================================================================
sName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
pbName
================================================================================
pbName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
pi1Name
================================================================================
pi1Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
pi2Name
================================================================================
pi2Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
pi4Name
================================================================================
pi4Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
pi8Name
================================================================================
pi8Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
pu1Name
================================================================================
pu1Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
pu2Name
================================================================================
pu2Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
pu4Name
================================================================================
pu4Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
pu8Name
================================================================================
pu8Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
pf4Name
================================================================================
pf4Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
pf8Name
================================================================================
pf8Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
pchName
================================================================================
pchName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
pbName
================================================================================
pbName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
pvName
================================================================================
pvName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
pclName
================================================================================
pclName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
psName
================================================================================
psName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
ppbName
================================================================================
ppbName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
ppi1Name
================================================================================
ppi1Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
ppi2Name
================================================================================
ppi2Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
ppi4Name
================================================================================
ppi4Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
ppi8Name
================================================================================
ppi8Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
ppu1Name
================================================================================
ppu1Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
ppu2Name
================================================================================
ppu2Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
ppu4Name
================================================================================
ppu4Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
ppu8Name
================================================================================
ppu8Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
ppf4Name
================================================================================
ppf4Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
ppf8Name
================================================================================
ppf8Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
ppchName
================================================================================
ppchName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
ppbName
================================================================================
ppbName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
ppvName
================================================================================
ppvName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
ppclName
================================================================================
ppclName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
ppsName
================================================================================
ppsName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
abName
================================================================================
abName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
ai1Name
================================================================================
ai1Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
ai2Name
================================================================================
ai2Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
ai4Name
================================================================================
ai4Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
ai8Name
================================================================================
ai8Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
au1Name
================================================================================
au1Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
au2Name
================================================================================
au2Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
au4Name
================================================================================
au4Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
au8Name
================================================================================
au8Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
af4Name
================================================================================
af4Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
af8Name
================================================================================
af8Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
achName
================================================================================
achName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
abName
================================================================================
abName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
avName
================================================================================
avName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
aclName
================================================================================
aclName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
asName
================================================================================
asName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cbName
================================================================================
cbName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
ci1Name
================================================================================
ci1Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
ci2Name
================================================================================
ci2Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
ci4Name
================================================================================
ci4Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
ci8Name
================================================================================
ci8Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cu1Name
================================================================================
cu1Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cu2Name
================================================================================
cu2Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cu4Name
================================================================================
cu4Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cu8Name
================================================================================
cu8Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cf4Name
================================================================================
cf4Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cf8Name
================================================================================
cf8Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cchName
================================================================================
cchName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cbName
================================================================================
cbName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cvName
================================================================================
cvName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cclName
================================================================================
cclName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
csName
================================================================================
csName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cxbName
================================================================================
cxbName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cxi1Name
================================================================================
cxi1Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cxi2Name
================================================================================
cxi2Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cxi4Name
================================================================================
cxi4Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cxi8Name
================================================================================
cxi8Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cxu1Name
================================================================================
cxu1Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cxu2Name
================================================================================
cxu2Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cxu4Name
================================================================================
cxu4Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cxu8Name
================================================================================
cxu8Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cxf4Name
================================================================================
cxf4Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cxf8Name
================================================================================
cxf8Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cxchName
================================================================================
cxchName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cxbName
================================================================================
cxbName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cxvName
================================================================================
cxvName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cxclName
================================================================================
cxclName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cxsName
================================================================================
cxsName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
b1Name
================================================================================
b1Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
b123Name
================================================================================
b123Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
fName
================================================================================
fName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cName
================================================================================
cName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cxName
================================================================================
cxName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
stName
================================================================================
stName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
eName
================================================================================
eName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
tName
================================================================================
tName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
szName
================================================================================
szName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
brName
================================================================================
brName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
fnName
================================================================================
fnName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
lpName
================================================================================
lpName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
wName
================================================================================
wName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
dwName
================================================================================
dwName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
lName
================================================================================
lName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
uiName
================================================================================
uiName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
ui1Name
================================================================================
ui1Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
ui2Name
================================================================================
ui2Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
ui4Name
================================================================================
ui4Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
ui8Name
================================================================================
ui8Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cxui1Name
================================================================================
cxui1Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cxui2Name
================================================================================
cxui2Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cxui4Name
================================================================================
cxui4Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cxui8Name
================================================================================
cxui8Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
nName
================================================================================
nName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
G_Name
================================================================================
G_Name
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cuName
================================================================================
cuName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
cufftName
================================================================================
cufftName
--------------------------------------------------------------------------------

(identifier
  (prefix)
  (body))

================================================================================
PascalCase
================================================================================
PascalCase
--------------------------------------------------------------------------------

(identifier)

================================================================================
camelCase
================================================================================
camelCase
--------------------------------------------------------------------------------

(identifier)

================================================================================
snake_case
================================================================================
snake_case
--------------------------------------------------------------------------------

(identifier)

================================================================================
SHOUTING_SNAKE_CASE
================================================================================
SHOUTING_SNAKE_CASE
--------------------------------------------------------------------------------

(identifier)

================================================================================
cxu4_normal_variable
================================================================================
cxu4_normal_variable
--------------------------------------------------------------------------------

(identifier)

